@startuml
skinparam classAttributeIconSize 0

AddProductToCartAction -->ListProductsUI
AddProductToCartAction -->AddProductToCartUI
AddProductToCartUI --> OrderServerController
OrderServerController -->OrderServer
OrderServer --> AddProductToCartController
AddProductToCartController --> CustomerRepository
CustomerRepository --> JpaCustomerRepository
CustomerRepository --> InMemoryCustomerRepository

class ListProductsUI{
 +doShow()
 +headLine()
}

class AddProductToCartUI{
 +doShow()
 +repeatLoop()
 +chooseProduct()
 +chooseQuantity()
 +chooseCustomer()
 +headLine()
}

class OrderServerController{
+establishConnection()
+validateCustomer(int customer)
+addProduct(String name, int quantity)
+saveCart()
+disconnect()
}

class OrderServer{
+ClientHandler(Socket socket)
+readMessage(byte[] buf)
+chooseAction(int code, String message)
+writeMessage(String answer)
}
class AddProductToCartController{
-ListProductService
+validateNameOfProduct(String name)
+addProduct(String name, int quantity)
+validateCustomer(int vat)
+saveCart()
}

interface CustomerRepository{
+findByPhoneNumber(Integer id)
}

class JpaCustomerRepository{
+findByPhoneNumber(Integer id)
}

class InMemoryCustomerRepository{
+findByPhoneNumber(Integer id)
}
@enduml